// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterbar - SearchButton & ResetButton ResetButton 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <!---->
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button>
            <!---->
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - SearchButton & ResetButton ResetButton 2`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <!---->
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - SearchButton & ResetButton SearchButton 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <!---->
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <!----> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - SearchButton & ResetButton SearchButton 2`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <!---->
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - SearchButton & ResetButton Slots 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <!---->
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div>prepend-filterbar-submit</div> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <div>append-filterbar-submit</div>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - filterButtons JSX 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <div class="filterbar__buttons">
      <div class="el-form-item el-form-item--small">
        <!---->
        <div class="el-form-item__content"><button>button</button><strong>strong</strong>
          <!---->
        </div>
      </div>
    </div>
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - filterButtons 带下拉按钮渲染 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <div class="filterbar__buttons">
      <div class="el-form-item el-form-item--small">
        <!---->
        <div class="el-form-item__content">
          <div class="el-dropdown">
            <div class="el-button-group"><button type="button" class="el-button el-button--primary el-button--small">
                <!---->
                <!----><span><i class="el-icon-circle-plus-outline"></i>
              下拉按钮1
             </span></button><button type="button" class="el-button el-button--primary el-button--small el-dropdown__caret-button" aria-haspopup="list">
                <!---->
                <!----><span><i class="el-dropdown__icon el-icon-arrow-down"></i></span></button></div>
            <ul class="el-dropdown-menu el-popper" style="display: none;">
              <li tabindex="-1" class="el-dropdown-menu__item">
                <!---->
                菜单1
              </li>
              <li tabindex="-1" class="el-dropdown-menu__item">
                <!---->
                菜单2
              </li>
            </ul>
          </div>
          <div class="el-dropdown"><button type="button" class="el-button el-button--primary el-button--small el-dropdown-selfdefine" aria-haspopup="list" role="button" tabindex="0">
              <!---->
              <!----><span>
                下拉按钮2<i class="el-icon-arrow-down el-icon--right"></i></span></button>
            <ul class="el-dropdown-menu el-popper" style="display: none;">
              <li tabindex="-1" class="el-dropdown-menu__item">
                <!---->
                菜单1
              </li>
              <li tabindex="-1" class="el-dropdown-menu__item">
                <!---->
                菜单2
              </li>
            </ul>
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - filterButtons 普通按钮渲染 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <div class="filterbar__buttons">
      <div class="el-form-item el-form-item--small">
        <!---->
        <div class="el-form-item__content"><button type="button" class="el-button el-button--default el-button--small">
            <!---->
            <!----><span>
            default
          </span></button><button type="button" class="el-button el-button--text el-button--small">
            <!---->
            <!----><span>
            text
          </span></button><button type="button" class="el-button el-button--primary el-button--small">
            <!----><i class="el-icon-edit"></i><span>
            primary
          </span></button><button type="button" class="el-button el-button--success el-button--small">
            <!----><i class="el-icon-check"></i><span>
            success
          </span></button><button type="button" class="el-button el-button--info el-button--small">
            <!----><i class="el-icon-message"></i><span>
            info
          </span></button><button type="button" class="el-button el-button--warning el-button--small">
            <!----><i class="el-icon-star-off"></i><span>
            warning
          </span></button><button type="button" class="el-button el-button--danger el-button--small">
            <!----><i class="el-icon-delete"></i><span>
            danger
          </span></button>
          <!---->
        </div>
      </div>
    </div>
    <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <!---->
  </form>
</div>
`;

exports[`filterbar - filterFields FilterForm JSX 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <!---->
    <div class="filterbar__submit filterbar__submit--nomore">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <div class="filterbar__form">
      <div class="filterbar__field">
        <!----> <button>button</button></div>
      <div class="filterbar__field">
        <!----> <strong>strong</strong></div>
    </div>
  </form>
</div>
`;

exports[`filterbar - filterFields FilterForm 渲染所有有效的内置字段类型 1`] = `
<div class="list-view__filterbar list-view__filterbar--fold">
  <form class="el-form el-form--inline">
    <!---->
    <div class="filterbar__submit filterbar__submit--nomore">
      <div class="filterbar__submit-btn" style="transform: translateX(0px);">
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
              <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
              <!---->
              <!----><span>
            重置
          </span></button>
            <!---->
          </div>
        </div>
      </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
        <!----><i class="el-icon-caret-bottom"></i>
        <!----></button>
    </div>
    <div class="filterbar__form">
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-input el-input--small el-input--suffix" style="width: 180px;">
              <!----><input type="text" autocomplete="off" placeholder="文本字段" class="el-input__inner">
              <!---->
              <!---->
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-input el-input--small is-disabled el-input--suffix" style="width: 180px;">
              <!----><input type="text" disabled="disabled" autocomplete="off" placeholder="禁用文本" class="el-input__inner">
              <!---->
              <!---->
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-form-item__label">数字</div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-input-number el-input-number--small is-controls-right" style="width: 100px;"><span role="button" class="el-input-number__decrease"><i class="el-icon-arrow-down"></i></span><span role="button" class="el-input-number__increase"><i class="el-icon-arrow-up"></i></span>
              <div class="el-input el-input--small">
                <!----><input type="text" autocomplete="off" max="Infinity" min="-Infinity" class="el-input__inner" role="spinbutton" aria-valuemax="Infinity" aria-valuemin="-Infinity" aria-valuenow="undefined" aria-disabled="false">
                <!---->
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-select el-select--small" style="width: 180px;">
              <!---->
              <div class="el-input el-input--small el-input--suffix">
                <!----><input type="text" readonly="readonly" autocomplete="off" placeholder="单选字段" class="el-input__inner">
                <!----><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-select__caret el-input__icon el-icon-arrow-up"></i><!----><!----></span>
                <!----></span>
                <!---->
              </div>
              <div class="el-select-dropdown el-popper" style="display: none;">
                <div class="el-scrollbar" style="display: none;">
                  <div class="el-select-dropdown__wrap el-scrollbar__wrap el-scrollbar__wrap--hidden-default">
                    <ul class="el-scrollbar__view el-select-dropdown__list">
                      <!---->
                      <li class="el-select-dropdown__item"><span>选项 1</span></li>
                      <li class="el-select-dropdown__item"><span>选项 2</span></li>
                      <li class="el-select-dropdown__item"><span>选项 3</span></li>
                      <li class="el-select-dropdown__item is-disabled"><span>禁用项</span></li>
                    </ul>
                  </div>
                  <div class="el-scrollbar__bar is-horizontal">
                    <div class="el-scrollbar__thumb" style="width: 0px; transform: translateX(0%); -webkit-transform: translateX(0%);"></div>
                  </div>
                  <div class="el-scrollbar__bar is-vertical">
                    <div class="el-scrollbar__thumb" style="height: 0px; transform: translateY(0%); -webkit-transform: translateY(0%);"></div>
                  </div>
                </div>
                <p class="el-select-dropdown__empty">
                  无数据
                </p>
              </div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-select el-select--small" style="width: 180px;">
              <div class="el-select__tags" style="max-width: -32px; width: 100%;">
                <!---->
                <!----><input type="text" autocomplete="off" class="el-select__input is-small" style="width: -0.625%; max-width: -42px;"></div>
              <div class="el-input el-input--small el-input--suffix">
                <!----><input type="text" readonly="readonly" autocomplete="off" placeholder="多选字段" class="el-input__inner">
                <!----><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-select__caret el-input__icon el-icon-arrow-up"></i><!----><!----></span>
                <!----></span>
                <!---->
              </div>
              <div class="el-select-dropdown el-popper is-multiple" style="display: none;">
                <div class="el-scrollbar" style="display: none;">
                  <div class="el-select-dropdown__wrap el-scrollbar__wrap el-scrollbar__wrap--hidden-default">
                    <ul class="el-scrollbar__view el-select-dropdown__list">
                      <!---->
                      <li class="el-select-dropdown__item"><span>选项 1</span></li>
                      <li class="el-select-dropdown__item"><span>选项 2</span></li>
                      <li class="el-select-dropdown__item"><span>选项 3</span></li>
                      <li class="el-select-dropdown__item is-disabled"><span>禁用项</span></li>
                    </ul>
                  </div>
                  <div class="el-scrollbar__bar is-horizontal">
                    <div class="el-scrollbar__thumb" style="width: 0px; transform: translateX(0%); -webkit-transform: translateX(0%);"></div>
                  </div>
                  <div class="el-scrollbar__bar is-vertical">
                    <div class="el-scrollbar__thumb" style="height: 0px; transform: translateY(0%); -webkit-transform: translateY(0%);"></div>
                  </div>
                </div>
                <p class="el-select-dropdown__empty">
                  无数据
                </p>
              </div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-date-editor el-input el-input--small el-input--prefix el-input--suffix el-date-editor--date" style="width: 180px;">
              <!----><input type="text" autocomplete="off" name="" placeholder="日期选择" class="el-input__inner"><span class="el-input__prefix"><i class="el-input__icon el-icon-date"></i><!----></span><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-input__icon"></i><!----></span>
              <!----></span>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-date-editor el-range-editor el-input__inner el-date-editor--daterange el-range-editor--small" expandtrigger="hover" style="width: 240px;"><i class="el-input__icon el-range__icon el-icon-date"></i><input autocomplete="off" placeholder="开始日期" name="" class="el-range-input"><span class="el-range-separator">-</span><input autocomplete="off" placeholder="结束日期" name="" class="el-range-input"><i class="el-input__icon el-range__close-icon"></i></div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-date-editor el-input el-input--small el-input--prefix el-input--suffix el-date-editor--time-select" style="width: 120px;">
              <!----><input type="text" autocomplete="off" name="" placeholder="固定时间" class="el-input__inner"><span class="el-input__prefix"><i class="el-input__icon el-icon-time"></i><!----></span><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-input__icon"></i><!----></span>
              <!----></span>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-date-editor el-input el-input--small el-input--prefix el-input--suffix el-date-editor--time" style="width: 120px;">
              <!----><input type="text" autocomplete="off" name="" placeholder="任意时间" class="el-input__inner"><span class="el-input__prefix"><i class="el-input__icon el-icon-time"></i><!----></span><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-input__icon"></i><!----></span>
              <!----></span>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-date-editor el-range-editor el-input__inner el-date-editor--timerange el-range-editor--small" style="width: 200px;"><i class="el-input__icon el-range__icon el-icon-time"></i><input autocomplete="off" placeholder="开始时间" name="" class="el-range-input"><span class="el-range-separator">-</span><input autocomplete="off" placeholder="结束时间" name="" class="el-range-input"><i class="el-input__icon el-range__close-icon"></i></div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-date-editor el-input el-input--small el-input--prefix el-input--suffix el-date-editor--datetime" style="width: 200px;">
              <!----><input type="text" autocomplete="off" name="" placeholder="日期时间" class="el-input__inner"><span class="el-input__prefix"><i class="el-input__icon el-icon-time"></i><!----></span><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-input__icon"></i><!----></span>
              <!----></span>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content">
            <div class="el-date-editor el-range-editor el-input__inner el-date-editor--datetimerange el-range-editor--small" expandtrigger="hover" style="width: 360px;"><i class="el-input__icon el-range__icon el-icon-time"></i><input autocomplete="off" placeholder="开始日期" name="" class="el-range-input"><span class="el-range-separator">-</span><input autocomplete="off" placeholder="结束日期" name="" class="el-range-input"><i class="el-input__icon el-range__close-icon"></i></div>
            <!---->
          </div>
        </div>
      </div>
      <div class="filterbar__field">
        <!---->
        <div class="el-form-item el-form-item--small">
          <!---->
          <div class="el-form-item__content"><span class="el-cascader el-cascader--small" style="width: 180px;"><div class="el-input el-input--small el-input--suffix"><!----><input type="text" readonly="readonly" autocomplete="off" placeholder="级联选项" class="el-input__inner"><!----><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-input__icon el-icon-arrow-down"></i><!----></span>
            <!----></span>
            <!---->
          </div><span class="el-cascader__label"></span></span>
          <!---->
        </div>
      </div>
    </div>
</div>
</form>
</div>
`;
